# notes

./: Cargo.toml  Dioxus.toml
assets/: fonts.css  icons.css  main.css  theme.css
src/: main.rs
src/core_notes/: error.rs  mod.rs  parser.rs  utilities.rs
src/core_notes/db/: async_db.rs  async_sqlite.rs  mod.rs  tests.rs
src/core_notes/nfs/: mod.rs
src/core_notes/nfs/visitors/: list.rs  mod.rs
src/desktop_app/: mod.rs  settings.rs
src/desktop_app/editor/: mod.rs  note_browser.rs  text_editor.rs
src/desktop_app/modal/: mod.rs
src/desktop_app/modal/selector/: mod.rs  note_search.rs  note_select.rs
