[package]
name = "desktop_notes"
ersion = "0.1.0"
authors = ["Nico Hormazábal <mail@nico2sh.com>"]
edition = "2021"

[dependencies]
##############
# Core Notes #
##############
## Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
## Debug
log = "0.4"
env_logger = "0.11"
## Error Handling
thiserror = "2.0"
## DB Stuff
rusqlite = { version = "0.32", features = ["bundled"] }
## Browse files
ignore = "0.4"
## Hash function
gxhash = "3.4"
## Regular Expressions
regex = "1.11"
# Markdown parsing
pulldown-cmark = "0.12"
## Async stuff
# tokio = { version = "1.42", features = ["full"] }
crossbeam-channel = "0.5"
# futures-channel = "0.3"

###############
# Desktop App #
###############
dioxus = { version = "0.6", features = ["desktop"] }
dioxus-sdk = { version = "0.6", features = [] }
dioxus-desktop = "0.6"
dioxus-logger = "0.6"
dioxus-router = "0.6"
## Error Handling
anyhow = "1.0"
## File dialog
rfd = "0.15"
## Where the home dir is
dirs = "5.0"
# Fuzzy search
nucleo = "0.5"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

# [profile]
#
# [profile.wasm-dev]
# inherits = "dev"
# opt-level = 1
#
# [profile.server-dev]
# inherits = "dev"
#
# [profile.android-dev]
# inherits = "dev"
